Date: Mon, 18 Jan 2016 10:18:29 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.5.5)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.5.6 2016-XX-XX Marc-Etienne Vargenau ==

* Upload plugin: put date and author in history

== 1.5.5 2015-12-11 Marc-Etienne Vargenau ==

* Fix tooltip translation in ~CreateToc plugin
* Remove access keys
* Check MAX_PAGENAME_LENGTH in CreatePage
* Fix fatal database error with multiple comma-delimited sortby args
* Remove forbidden characters: ~<~>~[~]~{~}~"~|~# from pagename
* New property: ALLOWED_LOAD giving list of directories from which it is allowed to load pages.
* Upload~: replace multiple spaces by single space
* Make functions merged and is_conflict public in lib/diff3.php (support request #162)

== 1.5.4 2015-06-29 Marc-Etienne Vargenau ==

* Fix ~WantedPages for Fusionforge
* Remove ~WantedPagesOld (use ~WantedPages instead)
* Add WebM format in Video plugin
* Update jscalendar to 1.0
* Remove Width and Height preferences modification in Edit Toolbar
* New icons in Edit Toolbar
* Make static templates in Edit Toolbar work
* Fix memory_limit for WIKI_SOAP
* Remove ~MockRequest
* Update jquery to 1.11.3

== 1.5.3 2015-03-04 Marc-Etienne Vargenau ==

* Fix Bug#648 Call to protected method
* easier file upload: forbidden characters in filename are replaced by dashes (instead of rejecting upload)
* improve handling of image insertion icon in edit toolbar (icon did not always appear after image uploading)
* bigger wikipaging font
* test again for function 'posix_times', it does not exist on Windows (reported by jdebert)
* remove FPDF, lib/gif.php, lib/font (were not used)
* rename plugin _Retransform to ~DebugRetransform
* use PHP ZIP class instead of home-made functions. ziplib renamed to mimelib
* add SOAP scripts
* rename FCKeditor to CKeditor